# my-med-result

./: .gitignore  README.md  SECURITY.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  importer.py  main.py  normalization.py  ocr.py  parser.py  repository.py  schema.sql  schemas.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: api.ts  app.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: AnalyteMultiSelect.tsx  DashboardView.tsx  LineChart.tsx  ProofDrawer.tsx  ReviewView.tsx  analytePanels.ts  chartUtils.ts
